--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
   <body>
     <h1 class="title">Discover hidden places in the world around you</h1>
     <p class="download">Download Excursion (Coming soon!)</p>
-    <video src=""></video>
+    <div class="center">
+      <video src="./resources/videos/excursion.mp4" autoplay loop></video>
+    </div>
     <h2 class="title">Your personal travel guide</h2>
     <div class="description">
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     </div>
-    <img src="" alt="">
-    <img src="" alt="">
+    <div class="center">
+      <img src="./resources/images/camp.jpg" alt="">
+      <br><br>
+      <img src="./resources/images/phone.png" alt="">
+    </div>
+
     <h2 class="title">Coming Soon for iPhone and Android</h2>
   </body>
   <p class="download">Download Excursion (Coming soon!)</p>
